--- a/Venier.IOTHub.Device/appsettings.json
+++ b/Venier.IOTHub.Device/appsettings.json
@@ -6,5 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "DeviceConnectionString": "HostName=ITS-Venier.azure-devices.net;DeviceId=device1;SharedAccessKey=YteJdn+xvYmioHF+yivNxKN4Ak7T3ja6BYf3kpjyuDA="
+  "DeviceConnectionString" : ""
 }
