--- a/Venier.IOTHub.Device/Venier.IOTHub.Device.csproj
+++ b/Venier.IOTHub.Device/Venier.IOTHub.Device.csproj
@@ -9,4 +9,13 @@
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.21.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+    <Content Update="appsettings.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+  </ItemGroup>
 </Project>
