--- a/Venier.IOTHub.Device/Venier.IOTHub.Device.csproj
+++ b/Venier.IOTHub.Device/Venier.IOTHub.Device.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Venier.IOTHub.Data\Venier.IOTHub.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="appsettings.Development.json">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
