--- a/Venier.IOTHub.Device/appsettings.json
+++ b/Venier.IOTHub.Device/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "DeviceConnectionString" : ""
-}
+  "ConnectionString": {
+    "connectionString": "HostName=ITS-Venier.azure-devices.net;DeviceId=device1;SharedAccessKey=YteJdn+xvYmioHF+yivNxKN4Ak7T3ja6BYf3kpjyuDA=\""
+    }
+  }
