--- a/Venier.IOTHub.Device/appsettings.json
+++ b/Venier.IOTHub.Device/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "connectionString": ""
-    }
+    "connectionString": "HostName=ITS-Venier.azure-devices.net;DeviceId=device1;SharedAccessKey=YteJdn+xvYmioHF+yivNxKN4Ak7T3ja6BYf3kpjyuDA="
+  }
   }
